# causal-inference-basic-book

./: README.md  pyproject.toml
notebook/: __init__.py  chap2.ipynb  chap4.ipynb
notebook/chap1_4/: .gitignore  chap1.ipynb  chap2.ipynb  chap3.ipynb  chap4.ipynb  pyproject.toml
notebook/chap1_4/output/chap3/: business_case_SEM
notebook/chap5/: chap5.ipynb  chap6.ipynb  chap7.ipynb  pyproject.toml
notebook/chap5_6/: pyproject.toml
notebook/chap7/: chap7.ipynb  pyproject.toml
notebook/chap7_8/: chap8.ipynb  pyproject.toml
notebook/output/chap3/: business_case_SEM
sample/: chap3_DiD.ipynb  chap3_SEM.ipynb  chap3_propensity-score-matching-IPW.ipynb  chap4_pycaret_classification.ipynb  chap4_pycaret_regression.ipynb  chap6_E-value.ipynb  chap6_sensitivity-analysis_partialR2.ipynb  chap7_MMM.ipynb  chap7_causalimpact.ipynb  chap7_pycaret_timeseries.ipynb  chap8_causal-discovery_gcastle.ipynb
src/causal_inference_basic_book/: chap2.ipynb  chap3.ipynb  chap4.ipynb
src/sample/: chap2_Ylearn.ipynb  chap3_IV.ipynb  chap3_RDD.ipynb  chap3_synthetic-control-method.ipynb  chap4_pycaret_classification-dashboard.ipynb  chap5_DML.ipynb  chap5_meta-learner.ipynb  chap8_PCMCIplus.ipynb
