[project]
name = "causal-inference-basic-book"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ylearn>=0.2.0",
    "networkx<3",
    "numpy<2",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
