[project]
name = "causal-inference-basic-book"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ylearn>=0.2.0",
    "networkx<3",
    "numpy<2",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.2",
    "semopy==2.3.11",
    "causallib>=0.9.7",
    "graphviz>=0.20.3",
    "rdrobust>=1.3.0",
    "rddensity>=2.4.4",
    "causalpy>=0.4.0",
    "pandas>=2.2.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.6",
]
