[project]
name = "causal-inference-basic-book"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "notebook>=7.2.2",
    "ruff>=0.7.4",
]
chap1-4 = [
    "ylearn>=0.2.0",
    "networkx<3",
    "numpy<2",
    "matplotlib<3.8.0",
    "semopy==2.3.11",
    "causallib>=0.9.7",
    "graphviz>=0.20.3",
    "rdrobust<=1.3.0",
    "rddensity>=2.4.4",
    "causalpy>=0.4.0",
    "pandas<2.2.0",
    "pycaret>=3.3.2",
    "pycaret[analysis]>=3.3.2",
    "shap>=0.44.0,<0.45.dev0",
    "kaleido==0.2.1",
    "werkzeug>=3.0.4",
]
chap5-6 = [
    "econml>=0.15.1",
    "matplotlib>=3.9.2",
    "numpy<2",
    "pandas>=2.2.3",
    "pysensemakr>=0.0.8",
    "scikit-learn>=1.5.2",
]
chap7-8 = [
    "gcastle>=1.0.4.rc1",
    "graphviz>=0.20.3",
    "kaleido==0.2.1",
    "networkx>=3.4.1",
    "numpy>=1.26.4",
    "pandas>=2.1.4",
    "pycaret>=3.3.2",
    "pymc-marketing>=0.9.0",
    "statsmodels>=0.14.4",
    "tfcausalimpact>=0.0.16",
    "tigramite>=5.2.6.2",
    "torch>=2.5.0",
]

[tool.uv]
conflicts = [
    [
        {group = "chap1-4"},
        {group = "chap5-6"},
        {group = "chap7-8"},
    ]
]
