[project]
name = "chap1_4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ylearn>=0.2.0",
    "networkx<3",
    "numpy<2",
    "jupyter>=1.1.1",
    "matplotlib<3.8.0",
    "semopy==2.3.11",
    "causallib>=0.9.7",
    "graphviz>=0.20.3",
    "rdrobust<=1.3.0",
    "rddensity>=2.4.4",
    "causalpy>=0.4.0",
    "pandas<2.2.0",
    "pycaret>=3.3.2",
    "pycaret[analysis]>=3.3.2",
    "shap>=0.44.0,<0.45.dev0",
    "kaleido==0.2.1",
    "werkzeug>=3.0.4",
]

[tool.uv]
dev-dependencies = [
    "jupyter>=1.1.1",
    "ruff>=0.6.9",
]
