[project]
name = "chap5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "econml>=0.15.1",
    "matplotlib>=3.9.2",
    "numpy<2",
    "pandas>=2.2.3",
    "pysensemakr>=0.0.8",
    "scikit-learn>=1.5.2",
]

[tool.uv]
dev-dependencies = [
    "jupyter>=1.1.1",
    "ruff>=0.6.9",
]
