[project]
name = "chap7"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gcastle>=1.0.3",
    "graphviz>=0.20.3",
    "kaleido==0.2.1",
    "networkx>=3.4.1",
    "numpy>=1.26.4",
    "pandas>=2.1.4",
    "pycaret>=3.3.2",
    "pymc-marketing>=0.9.0",
    "statsmodels>=0.14.4",
    "tfcausalimpact>=0.0.16",
    "tigramite>=5.2.6.2",
]

[tool.uv]
dev-dependencies = [
    "jupyter>=1.1.1",
    "ruff>=0.6.9",
]
